# gstprototype

./: .gitignore  README.md  pipeline.dot
gst-app/: Makefile  play  playbin.dot
gst-app/src/: Makefile  Makefile.am  play.c
gst-plugin/: .gitignore  Makefile  configure.ac  configure.scan
gst-plugin/confUlTkbp/: defines.awk  subs1.awk
gst-plugin/src/: Makefile  Makefile.am  Makefile.am_BAK  charm_embed_api.c  charm_embed_api.h  configure.scan  gstmyfilter.c  gstmyfilter.h  gstplugin.c  gstpreencfilter.c  gstpreencfilter.h
gst-plugin/src/.deps/: libgstaudiofilterexample_la-gstaudiofilter.Plo  libgstmyfilter_la-gstmyfilter.Plo  libgstplugin_la-gstpreencfilter.Plo  libgstprencfilter_la-gstpreencfilter.Plo
gst-plugin/src/.libs/: libgstaudiofilterexample.lai  libgstaudiofilterexample.ver  libgstmyfilter.lai  libgstmyfilter.ver
gst-plugin/tools/: gen_pre.py  pre.txt
